scss/_forms.scss
// The MIT License (MIT)
//
// Copyright (c) 2015-2017 Yegor Bugayenko
//
// Permission is hereby granted, free of charge, to any person obtaining a copy
// of this software and associated documentation files (the "Software"), to deal
// in the Software without restriction, including without limitation the rights
// to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
// copies of the Software, and to permit persons to whom the Software is
// furnished to do so, subject to the following conditions:
//
// The above copyright notice and this permission notice shall be included
// in all copies or substantial portions of the Software.
//
// THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
// IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
// FITNESS FOR A PARTICULAR PURPOSE AND NON-INFRINGEMENT. IN NO EVENT SHALL THE
// AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
// LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
// OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
// SOFTWARE.

@import 'defs';

fieldset {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;

  legend {
    margin: $em 0;
  }
}

input,
textarea,
select,
button {
  @extend %sans-serif;
  border-radius: .2 * $em;
  display: inline-block;
  max-width: 100%;
  padding: .55 * $em;

  + label,
  + input[type="checkbox"],
  + input[type="radio"] {
    page-break-before: always;
  }
}

option {
  @extend %sans-serif;
}

textarea {
  min-height: 5 * $em;
  min-width: 20 * $em;
}

label {
  display: inline-block;
  margin-bottom: .7 * $em;

  + * {
    page-break-before: always;
  }
}

input[type="submit"],
input[type="reset"],
button {
  background: darken($white, 5);
  color: darken($gray, 25);
  cursor: pointer;
  display: inline;
  margin-bottom: $em;
  margin-right: .4 * $em;
  padding: .3625 * $em 1.3 * $em;
  text-align: center;

  &:hover {
    background: darken($white, 15);
    color: $black;
  }

  &[disabled] {
    background: darken($white, 10);
    color: darken($gray, 10);
    cursor: not-allowed;
  }

}

input[type="submit"],
button[type="submit"] {
  background: $blue;
  color: $white;

  &:hover {
    background: darken($blue, 15);
    color: darken($white, 25);
  }

}

input[type="text"],
input[type="password"],
input[type="email"],
input[type="url"],
input[type="phone"],
input[type="tel"],
input[type="number"],
input[type="datetime"],
input[type="date"],
input[type="month"],
input[type="week"],
input[type="color"],
input[type="time"],
input[type="search"],
input[type="range"],
input[type="file"],
input[type="datetime-local"],
select,
textarea {
  border: 1px solid $gray;
  margin-bottom: $em;
  padding: .3 * $em .35 * $em;
}

input[type="checkbox"],
input[type="radio"] {
  flex-grow: 0;
  height: 1.65 * $em;
  margin-left: 0;
  margin-right: .5 * $em;
  vertical-align: middle;

  + label {
    page-break-before: avoid;
  }
}

select[multiple] {
  margin-bottom: 0;
  min-width: 15 * $em;
}

